# wsrepl

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: demo-1.py  demo-2.py  demo-3.py  demo-4.py
wsrepl/: MessageHandler.py  Ping0x1Thread.py  PingThread.py  Plugin.py  WSMessage.py  WebsocketConnection.py  __init__.py  __main__.py  app.css  app.py  cli.py  constants.py  log.py  utils.py
wsrepl/widgets/: CopyButton.py  DirectionSign.py  FormattedMessage.py  History.py  HistoryIndex.py  HistoryRow.py  Parent.py  __init__.py
